--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "aos": "^2.3.4",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.17.0",
     "next": "15.3.3",
     "react": "^19.0.0",
