--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "aos": "^2.3.4",
     "clsx": "^2.1.1",
     "framer-motion": "^12.17.0",
-    "next": "15.3.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "next": "^16.0.8",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "react-icons": "^5.5.0",
     "react-simple-typewriter": "^5.0.1",
     "swiper": "^11.2.8",
@@ -24,7 +24,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "eslint": "^9",
-    "eslint-config-next": "15.3.3",
+    "eslint-config-next": "^16.0.8",
     "tailwindcss": "^4"
   }
 }
